<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/txt_homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_page"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/new_black"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="32sp"/>
    <TextView
        android:id="@+id/text_usn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homepage_username"
        android:textColor="@color/new_black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp"
        android:layout_marginHorizontal="32dp"/>
    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homepage_email"
        android:textColor="@color/new_black"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp"
        android:layout_marginHorizontal="32dp"/>
    <TextView
        android:id="@+id/text_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homepage_phone"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/new_black"
        android:layout_marginHorizontal="32dp"/>
</LinearLayout>