<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/login"
        android:textColor="@color/new_black"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginBottom="48dp"/>
    <EditText
        android:id="@+id/log_usn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usn"
        android:textSize="16sp"
        android:inputType="text"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/rectangle_white"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="32dp"
        android:layout_marginBottom="24dp"/>
    <EditText
        android:id="@+id/log_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:hint="@string/psw"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:textColor="@color/gray"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/rectangle_white"
        android:layout_marginHorizontal="32dp"
        android:paddingVertical="12dp"
        android:paddingHorizontal="32dp"
        android:layout_marginBottom="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="120dp">
        <CheckBox
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:textColor="@color/new_black"/>
        <TextView
            android:id="@+id/forget_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textColor="@color/purple"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            android:textAlignment="textEnd"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_purple"
        android:layout_marginHorizontal="32dp"
        android:text="@string/login"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp"
        android:gravity="center">
        <TextView
            android:id="@+id/yet_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_register"
            android:textSize="12sp"
            android:textColor="@color/new_black"/>
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginHorizontal="5dp"
            android:textSize="12sp"
            android:textColor="@color/purple"/>
    </LinearLayout>

</LinearLayout>