<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/text_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/new_black"
        android:fontFamily="@font/poppins_bold"/>
    <LinearLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:background="@drawable/rectangle_white"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp">
        <ImageView
            android:id="@+id/img_usn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_person_24" />
        <EditText
            android:id="@+id/txt_usn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usn"
            android:inputType="text"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:background="@drawable/rectangle_white"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp">
        <ImageView
            android:id="@+id/img_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_email_24" />
        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:background="@drawable/rectangle_white"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp">
        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_phone_24" />
        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="8dp"
        android:background="@drawable/rectangle_white"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp">
        <ImageView
            android:id="@+id/img_psw"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/lock" />
        <EditText
            android:id="@+id/txt_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true"
            android:hint="@string/psw"
            android:inputType="textPassword"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:background="@null"
            android:layout_marginLeft="12dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_regular"/>
    </LinearLayout>
    <CheckBox
        android:id="@+id/terms_and_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/tnc"
        android:fontFamily="@font/poppins_regular"
        android:textSize="10sp"
        android:textColor="@color/new_black"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/rectangle_purple"
        android:text="@string/register"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/white"
        android:layout_marginBottom="24dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="32dp"
        android:gravity="center">
        <TextView
            android:id="@+id/have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_login"
            android:textColor="@color/new_black"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mau_login"
            android:layout_marginHorizontal="5dp"
            android:textSize="12sp"
            android:textColor="@color/purple"/>
    </LinearLayout>


</LinearLayout>